Se crean las paginas de logeo y registro, y se agregan su css

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,7 +1,18 @@
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="/">Home</a></li>
-					<li><a href="/generic">Generic</a></li>
-					<li><a href="/elements">Elements</a></li>
-				</ul>
-			</nav>
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="./index.html">Principal</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse div-ul" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./index.html">Iniciar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./HTML/registro.html">Registrarse</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
