--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,16 +1,18 @@
- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="./index.html">Principal</a>
+ <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid ps-4">
+      <a class="navbar-brand" href="/">Sistema de consultas NIP</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse div-ul" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./index.html">Iniciar</a>
+         <li class="nav-item">
+            <div id="cont-name-perfil">
+                <span><i class="bi bi-star"></i> Nombre del usuario</span>
+            </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./HTML/registro.html">Registrarse</a>
+            <a class="nav-link active" href="/auth">Cerrar sesion</a>
           </li>
         </ul>
       </div>
