Se agrega modal

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,24 @@
 {{> header}}
 {{> navbar}}
 
+<main class="mis-servicios">
+
+    <div class="titulo-mis-servicios">
+      <h2 class=" centrar-texto">Servicio de consulta NIP.</h2>
+      <p>Elige una opción, ingresa la información solicitada y visualiza rápidamente tu NIP en una ventana dedicada. 
+        Tu información está protegida y solo se utiliza para consultas. Accede a tu Número de Identificación Personal 
+        de forma rápida y conveniente en nuestro portal.
+      </p>
+    </div>
+
+    <div class="contenedor-mis-servicios">
+    
+    </div>
+
+  </main>
+
+   <!-- Modal -->
+    <div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+     
+    </div>
 {{> footer}}
