--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;600;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/nav.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/login.css">
+    <link rel="stylesheet" href="assets/css/home.css">
     <link rel="stylesheet" href="assets/css/animaciones.css">
     <link rel="stylesheet" href="icons/font/bootstrap-icons.css">
     <title>Document</title>
