--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -6,13 +6,10 @@
       </button>
       <div class="collapse navbar-collapse div-ul" id="navbarNav">
         <ul class="navbar-nav">
-         <li class="nav-item">
-            <div id="cont-name-perfil">
-                <span><i class="bi bi-star"></i> Nombre del usuario</span>
-            </div>
+         <li class="nav-item nav-usernumber">
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/auth">Cerrar sesion</a>
+            <a id="cerrar-sesion" class="nav-link active" href="/auth">Cerrar sesion</a>
           </li>
         </ul>
       </div>
