Se agrega validadores para el apartado de marcas

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -42,8 +42,8 @@
             </div>
 
             <div class="mb-3">
-            <select class="form-select" aria-label="Default select example" name="User_BrandId">
-            <option selected>Seleccione su marca</option>
+            <select class="form-select" aria-label="Default select example" name="User_BrandId" required>
+            <option disabled selected>Seleccione su marca</option>
             <option value="1">TOKS</option>
             <option value="2">PANDA EXPRESS</option>
             <option value="3">BEER FACTORY</option>
