Se agrega el CDN de la libreria SweetAlert2 y se realizan las config necesarias

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -17,3 +17,21 @@
         margin-right: 20px;
     }
 }
+
+/* styles-alert */
+
+.popup-alert{
+    height: auto !important;
+    width: 50% !important;
+    padding: 1;
+}
+
+.title-alert{
+    font-size: 2rem !important;
+    font-family: var(--fuenteSecundaria);
+}
+
+.info-content-alert{
+font-size: 2rem !important;
+font-family: var(--fuenteSecundaria);
+}
