--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/login.css">
     <link rel="stylesheet" href="assets/css/home.css">
+    <link rel="stylesheet" href="assets/css/bitacora.css">
     <link rel="stylesheet" href="assets/css/animaciones.css">
     <link rel="stylesheet" href="icons/font/bootstrap-icons.css">
-    <title>Document</title>
+    <title>Portal de consultas</title>
 </head>
 <body>
     
