Se cambian de lugar 2 etiquetas en el archivo bitacora

--- a/views/bitacora.hbs
+++ b/views/bitacora.hbs
@@ -5,12 +5,13 @@
 
 <header class="admin-header centrar-flex">    
     <form class="form-bitacora centrar-flex">
-      <div class="usuario-id">
-        <input placeholder="Ingrsa el numero de usuario" type="search" class="input buscar-usuario">
-      </div>
-      <div class="fecha-inicial">
-         <input type="date" class="form-control" name="fecha-ini" id="fecha-ini" aria-describedby="helpId">
+        <div class="fecha-inicial">
+         <input type="date" class="form-control" name="consultDate" id="fecha-ini" aria-describedby="helpId">
        </div>
+      <div class="usuario-id">
+        <input placeholder="Ingrsa el numero de usuario" name="NumEmpleado" type="search" class="input buscar-usuario">
+      </div>
+
     </form>
 </header>
 
