Se modifica el css y se agrega instrucciones en bitacora

--- a/public/assets/css/bitacora.css
+++ b/public/assets/css/bitacora.css
@@ -1,4 +1,20 @@
 /* Utilidades */
+.titulo-bitacora{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   text-align: center;
+   padding: 0 8rem;
+ }
+
+ 
+.column-flex{
+display: flex;
+flex-direction: column;
+justify-content: center;
+gap: 1rem;
+}
+
 .centrar-flex{
     display: flex;
     flex-direction: row;
