--- a/views/bitacora.hbs
+++ b/views/bitacora.hbs
@@ -3,7 +3,13 @@
 
   <main class="container contenedor-admin">
 
-<header class="admin-header centrar-flex">    
+<header class="admin-header column-flex">  
+      <div class="titulo-bitacora">
+      <h2 class=" centrar-texto">Bitacora de consultas.</h2>
+      <p>Selecciona la fecha deseada e ingresa el número de usuario para buscar y 
+        visualizar las consultas realizadas por ese usuario en esa fecha específica en la bitácora.
+      </p>
+    </div>  
     <form class="form-bitacora centrar-flex">
         <div class="fecha-inicial">
          <input type="date" class="form-control" name="consultDate" id="fecha-ini" aria-describedby="helpId">
