Se modifica el envio de valores al html MOstrarUsuarios de la bitacora

--- a/views/bitacora.hbs
+++ b/views/bitacora.hbs
@@ -25,6 +25,7 @@
     <table class="table table-striped">
         <thead>
             <tr>
+                <th scope="col">Indice</th>
                 <th scope="col">Nombre del usuario</th>
                 <th scope="col">NIP</th>
                 <th scope="col">Numero de referencia</th>
