Se agrega un apartado para ver el metodo de consulta y la hora de consulta

--- a/views/bitacora.hbs
+++ b/views/bitacora.hbs
@@ -29,6 +29,9 @@
                 <th scope="col">Nombre del usuario</th>
                 <th scope="col">NIP</th>
                 <th scope="col">Numero de referencia</th>
+                <th scope="col">Metodo de consulta</th>
+                <th scope="col">Hora de consulta</th>
+
             </tr>
         </thead>
         <tbody>
