Se agrega el logo de la empresa GRG

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,10 +1,11 @@
-{{>header}}
+{{> header}}
+{{> logo}}
 
 <div class="container d-flex justify-content-center pt-5">
   <div class="row w-100 d-flex justify-content-center">
     <div class="col-md-5">
       <br />
-      <div class="card sombras-bottom">
+      <div class="card sombras-bottom mb-3">
         <div class="card-body">
           
           <div class="text-center m-4">
@@ -96,14 +97,15 @@
             </div>
 
             <div class="d-grid gap-2 text-center">
-              <button type="submit" class="btn btn-primary">
+              <button type="submit" class="btn btn-danger">
                 Crear cuenta
               </button>
-              <span class=""><a href="/auth">&nbsp;Regresar</a></span>
             </div>
           </form>
         </div>
-        <div class="card-footer text-muted pb-3"></div>
+        <div class="card-footer text-center text-muted">
+              <span class=""><a href="/auth">&nbsp;Regresar</a></span>
+        </div>
       </div>
     </div>
   </div>
