--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
 {{> header}} {{!-- {{> navbar}} --}}
-
+{{> logo}}
 <div class="container d-flex justify-content-center pt-5">
   <div class="row w-100 d-flex justify-content-center">
     <div class="col-md-5">
@@ -46,16 +46,16 @@
 
             <div class="mb-3 row">
               <div class="d-grid gap-2 text-center">
-                <button type="submit" class="btn btn-primary">Login</button>
-                <span class="mt-2 mb-2"
-                  >¿No tienes una cuenta?
-                  <a href="/register">&nbsp;Registrate</a></span
-                >
+                <button type="submit" class="btn btn-danger">Login</button>      
               </div>
             </div>
           </form>
         </div>
-        <div class="card-footer text-muted pb-3"></div>
+        <div class="card-footer text-muted pb-3 d-grid gap-2 text-center">
+         <span class="mt-2 mb-2">¿No tienes una cuenta?
+                  <a href="/register">&nbsp;Registrate</a>
+          </span>
+        </div>
       </div>
     </div>
   </div>
