--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,6 +1,8 @@
- <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+ <nav class="navbar navbar-expand-lg navbar-dark color-empresarial">
     <div class="container-fluid ps-4">
-      <a class="navbar-brand" href="/">Sistema de consultas NIP</a>
+      <a class="navbar-brand a-logo-empresarial" href="/">
+      <img class="logo-empresarial" src="images/logo.png" alt="logo-empresarial">
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
