--- a/public/assets/css/nav.css
+++ b/public/assets/css/nav.css
@@ -1,3 +1,30 @@
+/* globales */
+nav{
+    overflow: hidden;
+    box-shadow: 0px 3px 2px -2px rgba(0,0,0,0.35);
+    
+}
+nav li{
+    color: #000;
+}
+.a-logo-empresarial{
+    background-color: white;
+    padding: .48rem;
+    position: absolute;
+    left: 0;
+    box-shadow: 0px 3px 2px -2px rgba(0,0,0,0.35);
+}
+
+.logo-empresarial{
+    max-width: 8rem;
+    height: 100%;
+}
+/* utils */
+.color-empresarial{
+    background-color:var(--color-red);
+    color: #fff;
+}
+
 #cont-name-perfil{
     background-color: #f6f7f7;
     border-radius: 10rem;
