Se agrega el css al elemento que contenera la version de la aplicacion

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -73,3 +73,11 @@ img {
   max-width: 500px !important;
   width: 100% !important;
 }
+
+
+.version {
+  text-align: center;
+  padding: 10px;
+  font-size: 12px;
+  color: #777;
+}
