Agregamos la columna Estatus de sms en el componente bitacora.hbs

--- a/views/bitacora.hbs
+++ b/views/bitacora.hbs
@@ -32,6 +32,7 @@
                 <th scope="col">Numero de referencia</th>
                 <th scope="col">Metodo de consulta</th>
                 <th scope="col">Hora de consulta</th>
+                <th scope="col">Estatus de sms</th>
 
             </tr>
         </thead>
